src/objects/Work_Package__c.object
<CustomObject>
    <description>BME - A Work Package represents a logical grouping of work in order to assign to owners. Multiple Open Item, Requirement, Use Case, and Test Case records can be associated to each Work Package, making it a very central object by which to track project progress.</description>
    <fields>
        <fullName>Biz_Process_Design_Completed__c</fullName>
        <label>% Biz Process Design Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Hours__c</fullName>
        <description>This field rolls up the sum of Business Process Design hours for all reqts associated to this work package.</description>
        <inlineHelpText>This field rolls up the sum of Business Process Design hours for all reqts associated to this work package.</inlineHelpText>
        <label>Biz Process Design Hours</label>
        <summarizedField>Requirement__c.Biz_Process_Design_Hours__c</summarizedField>
        <summaryForeignKey>Requirement__c.Work_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Hrs_Remaining__c</fullName>
        <formula>Biz_Process_Design_Hours__c - (VALUE(CASE( Biz_Process_Design_Completed__c, &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Biz_Process_Design_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Biz Process Design Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Biz Process Design Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Completed__c</fullName>
        <label>% Configuration Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Hours__c</fullName>
        <description>This field rolls up the sum of Configuration hours from all requirements associated to this work package.</description>
        <inlineHelpText>This field rolls up the sum of Configuration hours from all requirements associated to this work package.</inlineHelpText>
        <label>Configuration Hours</label>
        <summarizedField>Requirement__c.Configuration_Hours__c</summarizedField>
        <summaryForeignKey>Requirement__c.Work_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Configuration_Hrs_Remaining__c</fullName>
        <formula>Configuration_Hours__c - (VALUE(CASE( Configuration_Completed__c, &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * ( Configuration_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Completed__c</fullName>
        <label>% Development Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Hours__c</fullName>
        <description>This field rolls up the sum of Development hours from all requirements associated to this work package.</description>
        <inlineHelpText>This field rolls up the sum of Development hours from all requirements associated to this work package.</inlineHelpText>
        <label>Development Hours</label>
        <summarizedField>Requirement__c.Development_Hours__c</summarizedField>
        <summaryForeignKey>Requirement__c.Work_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Development_Hrs_Remaining__c</fullName>
        <formula>Development_Hours__c - (VALUE(CASE(Development_Completed__c , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Development_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Functional_Review_Date__c</fullName>
        <label>Expected Functional Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Technical_Review_Date__c</fullName>
        <label>Expected Technical Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_User_Review_Date__c</fullName>
        <label>Expected User Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Functional Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Requirements_Completed__c</fullName>
        <label>% Requirements Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Description__c</fullName>
        <description>Description of the related integrations(s)</description>
        <label>Integration Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <description>Integration points related to this work package</description>
        <label>Integrations</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;Setup needed&gt;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Objects__c</fullName>
        <label>Key Objects</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Offshore_Developer_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offshore Developer Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_Statement__c</fullName>
        <description>Short description of justification for current progress value</description>
        <inlineHelpText>Short description of justification for current progress value. Update before each status report and overwrite old values.</inlineHelpText>
        <label>Progress Statement</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>Indicates whether any issues are currently impacting the progress of this work package.  This value is used in reports and dashboards to gauge overall project status.</description>
        <inlineHelpText>Green - No issues preventing reaching target completion date.
Yellow - Open items are putting completion date at risk.
Red - PMO attention is required.  Work Package dates must be re-planned.</inlineHelpText>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Green - On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow - At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red - Off Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Objects__c</fullName>
        <description>Object Name (i.e., Accounts, Leads, Opportunities)</description>
        <label>Related Objects</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Work Packages</relationshipLabel>
        <relationshipName>Work_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Hours__c</fullName>
        <description>This field rolls up the sum of Requirements gathering hours from all requirements associated to this work package.</description>
        <inlineHelpText>This field rolls up the sum of Requirements gathering hours from all requirements associated to this work package.</inlineHelpText>
        <label>Requirements Hours</label>
        <summarizedField>Requirement__c.Requirements_Hours__c</summarizedField>
        <summaryForeignKey>Requirement__c.Work_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requirements_Hrs_Remaining__c</fullName>
        <formula>Requirements_Hours__c - (VALUE(CASE(Info_Requirements_Completed__c , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Requirements_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirements Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirements_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirements Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Completed__c</fullName>
        <label>% Tech Design Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Hours__c</fullName>
        <description>This field rolls up the sum of Technical Design hours from all requirements associated to this work package.</description>
        <inlineHelpText>This field rolls up the sum of Technical Design hours from all requirements associated to this work package.</inlineHelpText>
        <label>Tech Design Hours</label>
        <summarizedField>Requirement__c.Technical_Design_Hours__c</summarizedField>
        <summaryForeignKey>Requirement__c.Work_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Hrs_Remaining__c</fullName>
        <formula>Tech_Design_Hours__c - (VALUE(CASE(Tech_Design_Completed__c  , &quot;0%&quot;, &quot;0&quot;, &quot;25%&quot;, &quot;.25&quot;, &quot;50%&quot;, &quot;.5&quot;, &quot;75%&quot;, &quot;.75&quot;, &quot;100%&quot;, &quot;1&quot;, &quot;0&quot;)) * (Tech_Design_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Design Hrs Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Design Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Level_of_Effort__c</fullName>
        <description>This field sums up the total # of hours for this Work Package.</description>
        <formula>Biz_Process_Design_Hours__c +  Configuration_Hours__c +  Development_Hours__c +  Requirements_Hours__c +  Tech_Design_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Level of Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Cases_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Cases Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Design_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Design Review Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireframes_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wireframes Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Package_Name__c</fullName>
        <label>Work Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Work Package</label>
    <listViews>
        <fullName>AllWorkPackages</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Packages</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Packages_in_Progress</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All Work Packages In Progress</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Packages_not_Started</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>All Work Packages Not Started</label>
    </listViews>
    <listViews>
        <fullName>My_Work_Packages</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Work Packages</label>
    </listViews>
    <listViews>
        <fullName>My_Work_Packages_in_Progress</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My Work Packages In Progress</label>
    </listViews>
    <listViews>
        <fullName>My_Work_Packages_not_Started</fullName>
        <columns>NAME</columns>
        <columns>Work_Package_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>Release__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>My Work Packages Not Started</label>
    </listViews>
    <nameField>
        <displayFormat>WP-{000}</displayFormat>
        <label>Work Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>